fix overflow bug

--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -195,7 +195,7 @@ body.welcome
         .sidebar-content
         
             position: absolute
-            overflow: auto
+            overflow: hidden
             // border-top: 1px solid $gray-300
 
             h2
